# fbx2glb

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  Makefile.fbx  README.md  pyproject.toml  setup.py  test_import.py  upgrade_fbx
examples/: README.md  XBot_upgraded.fbx
examples/XBot/: XBotModel.tsx
fbx2glb/: __init__.py  batch.py  cli.py  component.py  converter.py  fbx_upgrader.py  params.py  utils.py
tests/: __init__.py  test_init.py  test_utils.py
tools/: README.md  upgrade_fbx.cpp
